<resources>
    <string name="app_name">全球行</string>
    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>
    <string name="title_changephone">手机号</string>
    <string name="title_changepwd">修改密码</string>
    <string name="title_mymessage">我的消息</string>
    <string name="title_driverrz">车主认证</string>
    <string name="title_tousu">投诉与反馈</string>
    <string name="title_userinfo">个人信息</string>
    <string name="title_helpcenter">帮助中心</string>
    <string name="title_aboutus">关于我们</string>

    <string name="title_register">注册</string>


    <string name="btn_changphone">更换手机号</string>
    <string name="btn_sure">确  认</string>
    <string name="btn_login">登   录</string>
    <string name="btn_exitlogin">退出登录</string>
    <string name="btn_nextorder">完成  去接下一单</string>
    <string name="content_currentphone">当前手机号为：</string>
    <string name="hint_inputphone">请输入手机号</string>
    <string name="hint_inputyzm">请输入验证码</string>
    <string name="hint_inputpwd">请输入密码</string>
    <string name="hint_setpwd">请设置密码</string>
    <string name="hint_inputagain">请重新输入</string>

    <string name="hint_inputaddress">请输入您想去的地址</string>
    <string name="hint_realname">请输入真实姓名</string>
    <string name="hint_inputemail">请输入邮箱</string>


    <string name="changesecond_tip">更换手机号后请使用新手机号登录</string>
    <string name="change_tip">更换后个人信息不变，下次可以使用新的手机号登录</string>
    <string name="tip_changesecond">请输入当前密码进行验证</string>
    <string name="tip_netxorder">提示：接下一单前，请确认乘客是否给您支付现金</string>
    <string name="tip_driverrz">车主认证业务流程指引：</string>
    <string name="tip_moneyerro">提示：如果计费金额与打表金额差异过大，可向平台客服发起投诉</string>
    <string name="tip_tousu">请输入投诉与反馈内容...</string>
    <string name="tip_register">*注册即视同意全球行相关条款和隐私政策</string>
    <string name="tip_wait">司机将在10分钟后赶往您的地点，请耐心等候...</string>
    <string name="tv_getyzm">获取验证码</string>
    <string name="tv_setpwd">设置密码</string>
    <string name="tv_startplace">起点：</string>
    <string name="tv_endplace">终点：</string>
    <string name="tv_jiajiarule">计价规则</string>
    <string name="tv_logindriver">司机端</string>
    <string name="tv_logintaker">乘客端</string>
    <string name="tv_forgotpwd">忘记密码？ </string>
    <string name="tv_register">  注册</string>
    <string name="tv_outcar">出车</string>
    <string name="tv_incar">收车</string>
    <string name="tv_xiuxi">休息中...</string>
    <string name="tv_grabing">抢单中...</string>
    <string name="tv_send">发送</string>
    <string name="tv_username">姓名</string>
    <string name="tv_sex">性别</string>
    <string name="tv_carnumber">车牌号</string>
    <string name="tv_email">邮箱</string>
    <string name="tv_jiedaotaker">接到乘客</string>
    <string name="tv_starbilling">开始计费</string>
    <string name="tv_mytrip">我的行程</string>
    <string name="tv_changyongaddress">常用地址</string>
    <string name="tv_help">帮助</string>
    <string name="tv_versioncontroll">版本升级</string>
    <string name="tv_about">关于</string>
    <string name="tv_notlogin">未登录</string>
    <string name="tv_chosesex">请选择您的性别</string>
    <string name="tv_cancel">取消</string>
    <string name="tv_chosephoto">选择图片源</string>
    <string name="tv_photo">相册</string>
    <string name="tv_camera">相机</string>
    <string name="tv_yes">是</string>
    <string name="tv_no">否</string>
    <string name="tv_Contactdriver">联系司机</string>
    <string name="tv_Contactservice">联系客服</string>
    <string name="tv_xiugaiheadicon">修改头像</string>
    <string name="tv_rob">抢单</string>
    <string name="tv_carmoney">车费详情</string>
    <string name="tv_nopj">暂无评价</string>
    <string name="tv_alreadypj">已评价</string>
    <string name="tv_cartaxi">出租车</string>
    <string name="tv_carmoto">摩的</string>
    <string name="tv_carminubus">面包车</string>
    <string name="tv_carlongcar">长途客车</string>
    <string name="tv_search">搜索</string>
    <string name="tv_ckaddress">参考地址</string>
    <string name="tv_restaurant">餐厅</string>
    <string name="tv_accommodation">住宿点</string>
    <string name="tv_attractions">旅游点</string>
    <string name="tv_government">政府</string>
    <string name="tv_hisaddress">历史地址</string>
    <string name="tv_dial">拨号</string>
    <string name="tv_minute">2分钟后</string>
    <string name="tv_heretake">在这里上车</string>
    <string name="tv_evaluate">匿名评价</string>
    <string name="tv_submit">提交</string>
    <string name="tv_mylocation">我的位置</string>
    <string name="tv_wantaddress">请输入您想要去哪儿？</string>
    <string name="tv_sethomeaddress">请设置您的家庭地址</string>
    <string name="tv_zanwu">暂无</string>
    <string name="tv_distance">距离终点：</string>
    <!--默认在中国-->
    <string name="tv_countrycode">+86</string>

    <string name="toast_xiugaicg">修改成功</string>
    <string name="toast_xiugaifail">修改失败</string>
    <string name="toast_inputphone">请输入您的手机号</string>
    <string name="toast_inputrightphone">请输入正确的手机号码</string>
    <string name="toast_beforgetyzm">请先获取验证码</string>
    <string name="toast_erroyzm">验证码不正确！</string>
    <string name="toast_erropwd">密码不正确！</string>
    <string name="toast_sendsucess">发送成功！</string>
    <string name="toast_grabordersucess">抢单成功！</string>
    <string name="toast_graborderfail">抢单失败！</string>
    <string name="toast_toususuccess">投诉成功</string>
    <string name="toast_exitsuccess">退出成功</string>
    <string name="toast_pwdresetsucess">密码重置成功！</string>
    <string name="toast_getyzmfail">验证码获取失败，请重试！</string>
    <string name="toast_pwdresetfail">密码重置失败，请重试！</string>
    <string name="toast_exitfail">退出失败！请重试!</string>
    <string name="toast_serverexception">服务器异常！</string>
    <string name="toast_pwddifferent">两次输入的密码不一致！</string>
    <string name="toast_parsingexception">解析异常</string>
    <string name="toast_dataexception">数据异常，请重试！</string>
    <string name="toast_getlocationfail">获取地理信息失败！</string>
    <string name="toast_notlogin">您还未登录</string>
    <string name="toast_exitapp">再按一次退出程序</string>
    <string name="toast_canceledtrip">用户已取消行程</string>
    <string name="toast_nojiedan">您还没有接单</string>
    <string name="toast_getorderfail">获取可抢订单失败</string>
    <string name="toast_startedjifei">已开始计费</string>
    <string name="toast_tousucontent">请输入投诉内容</string>
    <string name="toast_sdcard">请插入SD卡</string>
    <string name="toast_nophone">该客户未提供手机号</string>
    <string name="toast_noorder">订单不存在</string>

    <string name="request_success">执行成功!</string>

    <string name="tv_sendagain">重新发送</string>
    <string name="tv_second">秒</string>
    <string name="unit_km">km)</string>
    <string name="unit_min">min)</string>
    <string name="unit_money">R</string>
    <string name="tv_lianxiservice">联系客服</string>
    <string name="tv_endorder">结束订单</string>
    <string name="tv_more">更多</string>
    <string name="tv_journeymoney">里程费(</string>
    <string name="tv_timemoney">时长费(</string>
    <string name="tv_cancelorder">取消订单</string>
    <string name="tv_deleteorder">删除订单</string>
    <string name="tv_canceledorder">订单已取消</string>
    <string name="tv_sumorder">个订单</string>
    <string name="tv_gotaker">去接乘客</string>
    <string name="tv_ordering">接单中...</string>
    <string name="tv_canceled">已取消</string>
    <string name="tv_waitjiedan">等待接单</string>
    <string name="tv_waittakecar">等待上车</string>
    <string name="tv_receivedorder">已接单</string>
    <string name="tv_taked">已上车</string>
    <string name="tv_completed">已完成</string>
    <string name="tv_male">男</string>
    <string name="tv_female">女</string>
    <string name="tv_mdriver">师傅(</string>
    <string name="tv_carcoach">长途客车</string>

    <string name="tv_waitanswer">等待应答</string>
    <string name="tv_waitjiejia">等待接驾</string>
    <string name="tv_canceltrip">取消行程</string>
    <string name="toast_inputaddress">请输入地址</string>
    <string name="toast_inputdetailaddress">请输入详细的地址</string>
    <string name="tv_home">（家庭）</string>
    <string name="tv_homesimple">家庭</string>
    <string name="tv_company">（办公）</string>
    <string name="tv_companysimple">办公</string>
    <string name="tv_luxian">路线</string>
    <string name="tv_noname">未提供姓名</string>
    <string name="tv_nophone">该司机未提供手机号</string>
    <string name="tv_ckprice">参考价：</string>
    <string name="tv_callcartime">呼车倒计时：</string>
    <string name="toast_locationfail">定位失败！</string>
    <string name="toast_nosendtrip">您还没有发布行程</string>
    <string name="toast_endedorder">已结束订单</string>
    <string name="toast_inputstartplace">请输入起点</string>
    <string name="toast_inputendplace">请输入终点</string>
    <string name="toast_errotriportime">行程和时间有误</string>
    <string name="toast_getckfail">参考价获取失败</string>
    <string name="toast_tripcanceled">您的行程已取消</string>
    <string name="dialog_cancelcontent">取消订单吗？您今天的信用度会降低，将影响到您打车，是否取消？</string>
    <string name="unit_minute">分</string>
    <string name="dialog_tip">取消订单吗？将在两个小时内无法接单请确定，是否取消？</string>
    <string name="dialog_tipsimple">是否取消订单</string>
    <string name="more_text">更多</string>
    <string name="takecar_tip">更改目的地将会导致您的支付费用变动</string>
    <string name="start_text">起点：</string>
    <string name="end_text">终点：</string>
    <string name="price_tip">计价规则</string>
    <string name="sure_callCars">确认叫车</string>
    <string name="title_destination">前往目的地</string>
    <string name="tv_callcar">确认叫车</string>

    <string name="mqibu">米起步价</string>
    <string name="unit_meter">米</string>
    <string name="unit_minutes">分钟</string>
    <string name="tv_gopj">去评价</string>
    <string name="tv_serving">正在为您服务</string>
    <string name="toast_alredypj">您已经评价过了</string>
    <string name="tv_ggtip">您的设备不支持Google Play服务，需要安装谷歌相关组件?</string>
    <string name="tv_nowinstall">现在安装</string>
    <string name="tv_yhinstall">以后安装</string>
    <string name="toast_userid">账号异常，请重新登录</string>
    <string name="toast_pushId">网络异常，请检查网络后重启~</string>
    <string name="tv_getstartplace">正在获取上车地点</string>
    <string name="tv_nocar">附近暂无车可用，请稍等</string>


</resources>
