<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/register_root"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/register_back"
            android:layout_width="@dimen/backimg_parent_width"
            android:layout_height="@dimen/backimg_parent_height">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/gerenxinxi_xiangzuo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/title_register"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/color333"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="15dp"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_username"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhuce_name"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_nameedt"
            android:layout_width="match_parent"
            android:hint="@string/hint_realname"
            android:background="@null"
            android:layout_toRightOf="@+id/img_username"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_phone"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhuce_iphone"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/contry_tv"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/img_phone"
            android:text="@string/tv_countrycode"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_height="match_parent" />
        <EditText
            android:id="@+id/register_phoneedt"
            android:layout_width="match_parent"
            android:hint="@string/hint_inputphone"
            android:background="@null"
            android:inputType="phone"
            android:layout_toRightOf="@+id/contry_tv"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_pwdimg"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhaohuimima_yanzhengma"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/changpwd_yzmedt"
            android:layout_width="wrap_content"
            android:hint="@string/hint_inputyzm"
            android:background="@null"
            android:layout_toRightOf="@+id/img_pwdimg"
            android:layout_marginLeft="15dp"
            android:inputType="number"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/changpwd_yanzm"
            android:layout_width="wrap_content"
            android:text="@string/tv_getyzm"
            android:layout_gravity="end"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:textColor="@color/white"
            android:padding="10dp"
            android:background="@mipmap/wangjimima_buleicon"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_email"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhuce_youxiang"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_emailedt"
            android:layout_width="match_parent"
            android:hint="@string/hint_inputemail"
            android:background="@null"
            android:inputType="textEmailAddress"
            android:layout_toRightOf="@+id/img_email"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_pwd"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhuce_mima"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_pwd"
            android:layout_width="match_parent"
            android:hint="@string/hint_inputpwd"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/img_pwd"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/img_pwdagain"
            android:layout_width="wrap_content"
            android:src="@mipmap/zhuce_querenmima"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/register_pwdagain"
            android:layout_width="match_parent"
            android:hint="@string/hint_inputagain"
            android:background="@null"
            android:inputType="textPassword"
            android:layout_toRightOf="@+id/img_pwdagain"
            android:layout_marginLeft="15dp"
            android:layout_centerVertical="true"
            android:layout_height="match_parent" />

    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:background="@color/fengexian"
        android:layout_height="1dp"></View>


    <TextView
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/tip_register"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/queren_btn"
        android:layout_width="match_parent"
        android:text="@string/btn_sure"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/selector_changpwd_btn"
        android:layout_height="wrap_content" />
</LinearLayout>
