<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/sijiduan_bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/login_rootlay"
            android:layout_width="match_parent"
            android:layout_marginTop="57dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/tv_logintaker"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@mipmap/denglu_shurukuang"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/denglu_iphone"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/phone_edt"
                android:layout_width="match_parent"
                android:hint="@string/hint_inputphone"
                android:textColorHint="@color/white"
                android:padding="15dp"
                android:inputType="phone"
                android:textColor="@color/white"
                android:background="@null"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:background="@mipmap/denglu_shurukuang"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/denglu_mima"
                android:layout_marginLeft="10dp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/pwd_edt"
                android:layout_width="match_parent"
                android:hint="@string/hint_inputpwd"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:padding="15dp"
                android:background="@null"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:layout_marginLeft="26dp"
            android:layout_marginRight="26dp"
            android:layout_marginTop="30dp"
            android:textSize="21sp"
            android:background="@drawable/selector_login_btn"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="end"
            android:layout_marginRight="26dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/forgetpwd_tv"
                android:layout_width="wrap_content"
                android:text="@string/tv_forgotpwd"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="1dp"
                android:background="@color/white"
                android:layout_height="match_parent"></View>
            <TextView
                android:id="@+id/register_tv"
                android:layout_width="wrap_content"
                android:text="@string/tv_register"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
