<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/root_lay"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/back_relay"
            android:layout_width="@dimen/backimg_parent_width"
            android:layout_height="@dimen/backimg_parent_height">
            <ImageView
                android:layout_width="wrap_content"
                android:src="@mipmap/gerenxinxi_xiangzuo"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/backimg_marginleft"
                android:layout_height="wrap_content" />
        </RelativeLayout>
        <TextView
            android:layout_width="wrap_content"
            android:text="@string/title_tousu"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="@color/color333"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/send_msgtv"
            android:layout_width="@dimen/backimg_parent_width"
            android:text="@string/tv_send"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="18sp"
            android:textColor="@color/statecolor"
            android:gravity="center"
            android:layout_height="@dimen/backimg_parent_height" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/xml_bg"
        android:layout_height="15dp"></View>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp">
        <EditText
            android:id="@+id/tousu_contentedt"
            android:layout_width="wrap_content"
            android:hint="@string/tip_tousu"
            android:background="@null"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>
